# ProsealApp2

./: .gitignore  ADR-003_SUPABASE_TO_SQLITE.md  CLAUDE.md  GAP_ANALYSIS_BLUEPRINT.md  SPRINT_2_REPORT.md  changes.txt  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
Custom Instructions/: Custom Instructions.txt  בניית מערכת ניהול הצעות מתקדמת (1).docx  טבלת שאלות ותשובות מפורטת - טבלת שאלות ותשובות מפורטת (1).csv
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init_schema.sql  002_sync_queue.sql  003_full_schema.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  security.rs
src/components/: AiInternAccordion.tsx  CaptureBar.tsx  CopilotBriefing.tsx  CreateQuoteForm.tsx  ErrorBoundary.tsx  EscalationAlerts.tsx  FilterPanel.tsx  InteractionLogger.tsx  MetricsDashboard.tsx  SearchBar.tsx  Topbar.tsx
src/layouts/: SplitView.tsx
src/lib/: auth.tsx  auto-save.ts  constants.ts  data.ts  database.types.ts  db.ts  export.ts  hooks.ts  import-legacy.ts  offline-sync.ts  privacy.tsx  query.tsx  sanitization.ts  search-filter.test.ts  search-filter.ts  supabase.ts  sync-queue.ts  tauri.ts  theme.tsx  toast.tsx  utils.ts
src/pages/: Dashboard.tsx  Login.tsx
src/panels/: CaptureChat.tsx  QuoteDetail.tsx  QuoteList.tsx  WeeklyReport.tsx
src/test/: setup.ts
supabase/: README.md  RUN_ALL_MIGRATIONS.sql
supabase/_archived/migrations/: 011_captures.sql  013_interaction_outcome_vip.sql  014_client_phone.sql  019_ai_telemetry.sql  020_fix_last_contact_trigger.sql  021_schema_extensions.sql  022_audit_log.sql  023_ceo_feedback.sql  024_vacation_mode.sql  025_leads_pipeline.sql
supabase/functions/generate-summary/: index.ts
supabase/functions/generate-weekly-report/: index.ts
supabase/functions/process-capture/: index.ts
supabase/migrations/: 010_clients_quotes.sql  012_rls_new_tables.sql  015_unified_id_dedup.sql  016_temperature_decay_view.sql  017_copilot_features.sql  018_soft_deletes.sql
(+1 files in other folders)
