[package]
name = "proseal-brain"
version = "0.1.0"
description = "Proseal Brain — The Second Brain for Quote Management and Weekly Reports"
authors = ["Proseal"]
edition = "2024"

[lib]
name = "proseal_brain_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
