[package]
name = "proseal-brain"
version = "0.1.0"
description = "Proseal Brain — The Second Brain for Quote Management and Weekly Reports"
authors = ["Proseal"]
edition = "2024"

[lib]
name = "proseal_brain_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# [Req #225, #243, #245] Core Tauri runtime — Local-First desktop app
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# [Req #225, #245] Embedded SQLite with SQLCipher encryption at rest
# bundled-sqlcipher: compiles SQLCipher statically → no system dep, consistent cross-platform
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# [Req #292] Secure key storage — SQLCipher passphrase wrapped in OS keyring
keyring = "2"

# Serialization (JSON boundary + sync payloads)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# [Req #302] UTC ISO-8601 timestamps for conflict resolution
chrono = { version = "0.4", features = ["serde"] }

# Stable row identifiers (UUID v4) — matches old Postgres uuid columns
uuid = { version = "1", features = ["v4", "serde"] }

# Error propagation across tauri::command boundary
thiserror = "1"
anyhow = "1"

# [Req #301] Pre-flight regex sanitizer for AI egress (financial hard-block)
regex = "1"
once_cell = "1"

# Logging
log = "0.4"
env_logger = "0.11"
